Made the page more apealing using CSS and abit of JavaScript

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Quiz App</title>
   </head>
   <body>
+    <div class="container">
+      <div class="time">
+        <span id="hours">00</span>
+        <span>:</span>
+        <span id="minutes">00</span>
+        <span>:</span>
+        <span id="seconds">00</span>
+      </div>
+      <h2>Simple Quiz</h2>
+      <ol>
+        <li id="questions">Which is the best operating system?</li>
+      </ol>
+      <div class="buttons"></div>
+      <div id="next"></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
