updated the javascript page to generate different questions and answers

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Quiz App</title>
   </head>
   <body>
+    <div id="start"></div>
     <div class="container">
       <div class="time">
         <span id="hours">00</span>
@@ -17,11 +18,14 @@
       </div>
       <h2>Simple Quiz</h2>
       <ol>
-        <li id="questions">Which is the best operating system?</li>
+        <li id="questions"></li>
       </ol>
+      <br />
+      <hr />
       <div class="buttons"></div>
       <div id="next"></div>
     </div>
-    <script src="script.js"></script>
+
+    <script src="script.js" defer></script>
   </body>
 </html>
